--- a/moneymanager.client/src/pages/SpendingReport/SpendingReport.module.scss
+++ b/moneymanager.client/src/pages/SpendingReport/SpendingReport.module.scss
@@ -7,12 +7,12 @@
 }
 
 
-.transactions-list {
+.reports {
     background-color: var(--white);
-    max-height: calc(100vh - var(--header-height) - 20px);
+    height: calc(100vh - var(--header-height) - 40px);
     margin: 20px 20px 0 20px;
     box-shadow: 0 3px 24px 0 rgba(0, 0, 0, .2);
-    width: 50%;
+    width: 40%;
 
     ::-webkit-scrollbar {
         display: none;
