--- a/moneymanager.client/src/components/MonthSelection/MonthSelection.module.scss
+++ b/moneymanager.client/src/components/MonthSelection/MonthSelection.module.scss
@@ -1,15 +1,10 @@
-.wallet {
+.month {
     background-color: transparent;
     width: 100%;
 
     &:hover {
         cursor: pointer;
     }
-}
-
-.icon {
-    width: 40px;
-    height: 40px;
 }
 
 .menu {
@@ -19,38 +14,32 @@
 
 .name {
     font-weight: 600;
-    font-size: 1.3rem;
+    font-size: 1.6rem;
     color: rgba(0, 0, 0, .7);
 }
 
-.balance {
-    font-weight: 600;
+.range-date {
     font-size: 1.4rem;
-    letter-spacing: 1px;
+    letter-spacing: 0.5px;
 }
 
 .selection {
     width: 310px;
-    height: 480px;
+    height: 180px;
     background-color: var(--white);
     position: absolute;
-    top: 55px;
+    top: 370px;
     left: 0;
     box-shadow: 2px 2px 4px 4px rgba(0, 0, 0, .1);
     display: flex;
-    justify-content: center;
     font-size: 1.4rem;
     color: rgba(0, 0, 0, .5);
     z-index: 200;
 }
 
-.select-text {
-    margin: 10px;
-    align-self: center;
-}
-
-.wallet-item {
+.month-item {
     padding: 10px 10px 10px 20px;
+    height: 60px;
 
     &:hover {
         cursor: pointer;
@@ -58,16 +47,17 @@
     }
 }
 
-.name-item {
-    font-size: 1.4rem;
-    font-weight: 600;
-    color: var(--text-color);
-}
-
-.balance-item {
-    font-size: 1.3rem;
-}
-
-.primary-text {
+.select-text {
+    font-weight: 800;
+    font-size: 1.8rem;
     color: var(--primary);
+}
+
+.select-month {
+    height: 60px;
+
+    &:hover {
+        cursor: pointer;
+        background-color: rgba(45, 184, 76, .1);
+    }
 }
